--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "nodemon src/index.ts",
+    "build": "rimraf dist && tsc"
   },
   "keywords": [],
   "author": "",
