--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.ts",
-        "methods": ["GET", "POST", "DELETE", "PUT","PATCH","OPTIONS"]
+      "dest": "src/index.ts"
     }
   ]
 }
