--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon --inspect dist/api/index.js",
+    "dev": "nodemon --inspect dist/index.js",
     "build": "tsc",
     "start": "node dist/api/index.js"
   },
