--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./api/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
