--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-project",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "api/index.ts",
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
