--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
   "version": 2,
+  "name": "express-products-vercel",
   "builds": [
     {
-      "src": "src/index.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.ts"
+      "dest": "api/index.ts"
     }
   ]
 }
