--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
   "name": "express-products-vercel",
   "builds": [
     {
-      "src": "api/index.ts",
+      "src": "dist/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.ts"
+      "dest": "dist/index.ts"
     }
   ]
 }
